dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
spec:
  rules:
    - host: dashboard.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kubenetes-dashboard
                port:
                  number: 80
